runtime/ErrorHandling/TestSigInfoInHsErrFile.java fails to find pattern with slowdebug

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 21
    • Affects Version/s: 20
    • Component/s: hotspot
    • b06
    • generic
    • generic

      The following test failed in my jdk-20+26 stress testing runs:

      runtime/ErrorHandling/TestSigInfoInHsErrFile.java

      Here's a snippet from a log file:

      ----------System.out:(949/66901)----------
      Command line: [/work/shared/bug_hunt/thread_SMR_stress/jdk20_exp.git/build/linux-x86_64-normal-server-slowdebug/images/jdk/bin/java -cp /work/shared/bug_hunt/thread_SMR_stress/jdk20_exp.git/build/linux-x86_64-normal-server-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_tier1/classes/15/runtime/ErrorHandling/TestSigInfoInHsErrFile.d:/work/shared/bug_hunt/thread_SMR_stress/jdk20_exp.git/open/test/hotspot/jtreg/runtime/ErrorHandling:/work/shared/bug_hunt/thread_SMR_stress/jdk20_exp.git/build/linux-x86_64-normal-server-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_tier1/classes/15/test/lib:/work/local/jib-dcubed/install/jtreg/7/1/bundles/jtreg-7+1.zip/jtreg/lib/jtreg.jar:/work/local/jib-dcubed/install/jtreg/7/1/bundles/jtreg-7+1.zip/jtreg/lib/junit-platform-console-standalone-1.8.2.jar:/work/local/jib-dcubed/install/jtreg/7/1/bundles/jtreg-7+1.zip/jtreg/lib/testng-7.3.0.jar:/work/local/jib-dcubed/install/jtreg/7/1/bundles/jtreg-7+1.zip/jtreg/lib/jcommander-1.78.jar:/work/local/jib-dcubed/install/jtreg/7/1/bundles/jtreg-7+1.zip/jtreg/lib/guice-4.2.3.jar -XX:+UnlockDiagnosticVMOptions -Xmx100M -XX:-CreateCoredumpOnCrash -XX:ErrorHandlerTest=14 -version ]
      [2022-12-02T03:10:50.063277667Z] Gathering output for process 366943
      [2022-12-02T03:10:50.151244940Z] Waiting for completion for process 366943
      [2022-12-02T03:10:51.831016001Z] Waiting for completion finished for process 366943
      #
      # A fatal error has been detected by the Java Runtime Environment:
      ^^^ Matches # A fatal error has been detected.* at line 1^^^
      #
      # SIGSEGV (0xb) at pc=0x00007f516e2ee045, pid=366943, tid=366947
      ^^^ Matches # *SIGSEGV.* at line 3^^^
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0) (slowdebug build 20-internal-2022-12-01-1634314.dcubed...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 20-internal-2022-12-01-1634314.dcubed..., mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      ^^^ Matches # *Problematic frame.* at line 7^^^
      # V [libjvm.so+0x13df045] crash_with_segfault()+0x10
      #
      # CreateCoredumpOnCrash turned off, no core file dumped
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      <snip>

      --------------- T H R E A D ---------------

      Current thread (0x00007f516802da30): JavaThread "main" [_thread_in_vm, id=366947, stack(0x00007f516ccb5000,0x00007f516cdb6000)]

      Stack: [0x00007f516ccb5000,0x00007f516cdb6000], sp=0x00007f516cdb4c20, free space=1023k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13df045] crash_with_segfault()+0x10 (vmError.cpp:1804)
      V [libjvm.so+0x13df164] VMError::controlled_crash(int)+0x116 (vmError.cpp:1834)
      V [libjvm.so+0xd21ff5] JNI_CreateJavaVM_inner(JavaVM_**, void**, void*)+0x307 (jni.cpp:3662)
      V [libjvm.so+0xd2211c] JNI_CreateJavaVM+0x32 (jni.cpp:3710)
      C [libjli.so+0x7677] InitializeJVM+0x14c (java.c:1459)
      C [libjli.so+0x4397] JavaMain+0xdc (java.c:413)
      C [libjli.so+0xb108] ThreadJavaMain+0x27 (java_md.c:650)


      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000400

      Registers:

      <snip>

      ----------System.err:(12/785)*----------
      java.lang.RuntimeException: hs-err file incomplete (first missing pattern: siginfo: si_signo: \\d+ \\(SIGSEGV\\), si_code: \\d+ \\(SEGV_.*\\), si_addr: 0x0*400.*)
              at HsErrFileUtils.checkHsErrFileContent(HsErrFileUtils.java:135)
              at HsErrFileUtils.checkHsErrFileContent(HsErrFileUtils.java:71)
              at TestSigInfoInHsErrFile.main(TestSigInfoInHsErrFile.java:74)
              at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
              at java.base/java.lang.reflect.Method.invoke(Method.java:578)
              at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
              at java.base/java.lang.Thread.run(Thread.java:1591)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: hs-err file incomplete (first missing pattern: siginfo: si_signo: \d+ \(SIGSEGV\), si_code: \d+ \(SEGV_.*\), si_addr: 0x0*400.*)

            Assignee:
            Afshin Zafari
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: